Added background image

--- a/HTML-CSS/index.html
+++ b/HTML-CSS/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password-Generator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div>
-        <head>Hello</head>
-    </div>
+    <section>
+        <h1>Password Generator</h1>
+    </section>
 </body>
 
 </html>
