Added new effects

--- a/HTML-CSS/index.html
+++ b/HTML-CSS/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body id="particles-js">
     <section>
         <h1>Password Generator</h1>
     </section>
+    <script src="particles.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
