--- a/HTML-CSS/index.html
+++ b/HTML-CSS/index.html
@@ -10,7 +10,16 @@
 
 <body id="particles-js">
     <section>
-        <h1>Password Generator</h1>
+        <header>
+            <h1>Password Generator</h1>
+            <h2>by Viktor Danchev</h2>
+        </header>
+        <form>
+            <input type="text" disabled>
+        </form>
+        <button>
+            Generate
+        </button>
     </section>
     <script src="particles.js"></script>
     <script src="app.js"></script>
