--- a/index.html
+++ b/index.html
@@ -17,9 +17,22 @@
         <form>
             <input type="text" disabled>
         </form>
-        <button>
-            Generate
-        </button>
+        <article>
+            <h2></h2>
+            <label>Uppercase
+                <input type="checkbox">
+            </label>
+            <label>Lowercase
+                <input type="checkbox">
+            </label>
+            <label>Numbers
+                <input type="checkbox">
+            </label>
+            <label>Symbols
+                <input type="checkbox">
+            </label>
+        </article>
+        <button>Generate</button>
     </section>
     <script src="particles.js"></script>
     <script src="app.js"></script>
