--- a/index.html
+++ b/index.html
@@ -18,19 +18,24 @@
             <input type="text" disabled>
         </form>
         <article>
-            <h2></h2>
-            <label>Uppercase
-                <input type="checkbox">
-            </label>
-            <label>Lowercase
-                <input type="checkbox">
-            </label>
-            <label>Numbers
-                <input type="checkbox">
-            </label>
-            <label>Symbols
-                <input type="checkbox">
-            </label>
+            <form class="checkbox-form">
+                <label>Uppercase
+                    <input type="checkbox">
+                </label>
+                <label>Lowercase
+                    <input type="checkbox">
+                </label>
+                <label>Numbers
+                    <input type="checkbox">
+                </label>
+                <label>Symbols
+                    <input type="checkbox">
+                </label>
+            </form>
+            <form class="slider-form">
+                <label>Password Length:</label>
+                <input type="range" min="1" max="100" class="slider" id="myRange">
+            </form>
         </article>
         <button>Generate</button>
     </section>
