--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>by Viktor Danchev</h2>
         </header>
         <form class="password-field">
-            <input type="text" disabled>
+            <input type="text" placeholder="Password Field" disabled>
         </form>
         <article>
             <form class="checkboxes-form">
@@ -38,13 +38,14 @@
             </form>
             <form class="slider-form">
                 <label>Password Length:</label>
-                <input type="range" min="1" max="23" class="slider" id="myRange">
+                <input type="range" min="1" max="19" class="slider" id="myRange">
             </form>
         </article>
         <button>Generate</button>
     </section>
     <script src="Functionality/particles.js"></script>
     <script src="Functionality/app.js"></script>
+    <script src="Functionality/generate.js"></script>
 </body>
 
 </html>
