Added solution for generate password

--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
         </form>
         <article>
             <form class="checkboxes-form">
-                <div class="checkbox">
+                <div class="uppercase-checkbox">
                     <input type="checkbox">
                     <label>Uppercase</label>
                 </div>
-                <div class="checkbox">
+                <div class="lowercase-checkbox">
                     <input type="checkbox">
                     <label>Lowercase</label>
                 </div>
-                <div class="checkbox">
+                <div class="numbers-checkbox">
                     <input type="checkbox">
                     <label>Numbers</label>
                 </div>
-                <div class="checkbox">
+                <div class="symbols-checkbox">
                     <input type="checkbox">
                     <label>Symbols</label>
                 </div>
             </form>
             <form class="slider-form">
                 <label>Password Length:</label>
-                <input type="range" min="1" max="19" class="slider" id="myRange">
+                <input type="range" min="6" max="16" class="slider" id="myRange">
             </form>
         </article>
         <button>Generate</button>
