Added new copy text function

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script src="Functionality/particles.js"></script>
     <script src="Functionality/app.js"></script>
     <script src="Functionality/generate.js"></script>
+    <script src="Functionality/copyText.js"></script>
 </body>
 
 </html>
