Added copy function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>by Viktor Danchev</h2>
         </header>
         <form class="password-field">
-            <input type="text" placeholder="Password Field" disabled>
+            <input type="text" placeholder="Password Field" id="textArea" disabled>
         </form>
         <article>
             <form class="checkboxes-form">
