Added password length

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                 </div>
             </form>
             <form class="slider-form">
-                <label>Password Length:</label>
+                <label>Password Length:
+                    <span>11</span>
+                </label>
                 <input type="range" min="6" max="16" class="slider" id="myRange">
             </form>
         </article>
@@ -47,6 +49,7 @@
     <script src="Functionality/app.js"></script>
     <script src="Functionality/generate.js"></script>
     <script src="Functionality/copyText.js"></script>
+    <script src="Functionality/getPasswordLength.js"></script>
 </body>
 
 </html>
