--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h2>by Viktor Danchev</h2>
         </header>
         <form class="password-field">
+            <span class="tooltiptext">Copy</span>
             <input type="text" placeholder="Password Field" id="textArea" disabled>
         </form>
         <article>
