--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <h2>by Viktor Danchev</h2>
         </header>
         <form class="password-field">
-            <span class="tooltiptext">Copy</span>
-            <input type="text" placeholder="Password Field" id="textArea" disabled>
+            <span>Copy</span>
+            <input type="text" placeholder="Password Field" id="textArea" readonly="readonly">
         </form>
         <article>
             <form class="checkboxes-form">
