--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
         </form>
         <article>
             <form class="checkboxes-form">
-                <div class="uppercase-checkbox">
+                <label class="uppercase-checkbox container">
                     <input type="checkbox">
-                    <label>Uppercase</label>
-                </div>
-                <div class="lowercase-checkbox">
+                    Uppercase
+                </label>
+                <label class="lowercase-checkbox container">
                     <input type="checkbox">
-                    <label>Lowercase</label>
-                </div>
-                <div class="numbers-checkbox">
+                    Lowercase
+                </label>
+                <label class="numbers-checkbox container">
                     <input type="checkbox">
-                    <label>Numbers</label>
-                </div>
-                <div class="symbols-checkbox">
+                    Numbers
+                </label>
+                <label class="symbols-checkbox container">
                     <input type="checkbox">
-                    <label>Symbols</label>
-                </div>
+                    Symbols
+                </label>
             </form>
             <form class="slider-form">
                 <label>Password Length:
