--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <label>Password Length:
                     <span>11</span>
                 </label>
-                <input type="range" min="6" max="16" class="slider" id="myRange">
+                <input type="range" min="6" max="16" class="slider">
             </form>
         </article>
         <button>Generate</button>
