--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Styles/styles.css">
 </head>
 
-<body id="particles-js">
+<body id="particles-js" ontouchstart="">
     <section>
         <header class="heading">
             <h1>Password Generator</h1>
